--- a/configs/local_codebook.yaml
+++ b/configs/local_codebook.yaml
@@ -2,7 +2,8 @@ model:
   base_learning_rate: 4.5e-6
   target: taming.models.vqgan.VQModel
   params:
-    ckpt_path: 
+    # ckpt_path: 
+    monitor: val/rec_loss_epoch
     embed_dim: 256
     n_embed: 1024
     ddconfig:
@@ -29,18 +30,27 @@ model:
 data:
   target: taming.data.utils.DataModuleFromConfig
   params:
-    batch_size: 12
+    batch_size: 6
     num_workers: 8
     train:
       target: taming.data.custom.CustomTrain
       params:
-        training_images_list_file: ./data/meta/train_aug.txt
+        training_images_list_file: ./train.txt
         size: 256
         random_crop: True
     validation:
       target: taming.data.custom.CustomTest
       params:
-        test_images_list_file: ./data/meta/val_aug.txt
+        test_images_list_file: ./test.txt
         size: 256
         random_crop: True
 
+
+lightning:
+  callbacks:
+    image_logger:
+      target: taming.data.utils.ImageLogger
+      params:
+        batch_frequency: 10000
+        max_images: 2
+        increase_log_steps: False
